--- a/css/my.css
+++ b/css/my.css
@@ -59,7 +59,7 @@ body {
 }
 
 .imgPreview {
-    background-color: #FFF;
+    /*background-color: #FFF;*/
     overflow: hidden;
     padding: 0px 0px;
 
@@ -83,8 +83,10 @@ body {
 }
 
 #imgpreview {
-    margin-left: 20px;
+    background-color: #FFF;
+    margin-left: 0px;
     width: 200px;
+    margin-right: 0px;
 }
 
 
@@ -113,6 +115,14 @@ body {
     margin-bottom:  0px;
 }
 
+.container-test {
+    max-width: 300px;
+    margin: 20px auto;
+    max-height: 400px;
+}
+#image-upload{
+    max-width: 100%;
+}
 
 
 
