--- a/css/my.css
+++ b/css/my.css
@@ -1,6 +1,6 @@
 body {
     margin-top: 0%;
-    background-image: url('../img/round.png');
+    background-image: url('../img/BG-new.jpg');
     font-family: "Microsoft Yahei","Times New Roman",Georgia,Sans-Serif;
 }
 
@@ -12,7 +12,7 @@ body {
 
 .header{
     background-color: #600808;
-    width: 0 auto;
+	width: auto;
 }
 
 .heading {
