--- a/css/my.css
+++ b/css/my.css
@@ -4,7 +4,6 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
-
     font-family: "Microsoft Yahei","Times New Roman",Georgia,Sans-Serif;
 }
 
@@ -16,7 +15,7 @@ body {
 
 .header{
     background-color: #600808;
-	width: auto;
+    width: 0 auto;
 }
 
 .heading {
