--- a/css/my.css
+++ b/css/my.css
@@ -89,12 +89,32 @@ body {
     margin-right: 0px;
 }
 
+.js-container {
+	margin-top: 80px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 500px;
+    height: 300px;
+
+}
+
+.js-result {
+	margin-top: 80px;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: #FFF;
+	width: 500px;
+	height: 300px; 
+	max-width: 500px;
+	max-height: 300px; 
+}
 
 .img-bottom {
     margin: 20px;
-    margin-left: 100%;
+    margin-left: auto;
+    margin-right: auto; 
     max-width:  300px;
-    max-height: 300px
+    max-height: 300px;
 
 }
 
