--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,7 @@
 		body{
 			min-width: 320px;
 			width: 100%;
-			background-image: url(https://github.com/hustast/HustAvatar/blob/master/img/BG2.jpg?raw=true);
+			background-image: url('https://github.com/hustast/HustAvatar/blob/master/img/BG.jpg?raw=true');
 			background-repeat: no-repeat;
 			background-size: 100% 100%;
 			background-position: center top;
@@ -51,13 +51,27 @@
 			0%,40%,100%{ transform: scaleY(0.4); }
 			20%{transform: scaleY(1);}
 		}
+		.header-box img{
+			
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: 20%;
+			
+		}
+		.bottom-image{
+			margin-bottom: 0px;
+		}
+		.bottom-image img{
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+		}
 		.heading {
-				margin-top: 10em;
+				
 			    text-align: center;
 			    margin-right:  auto;
 			    margin-left: auto;
-			    
-			    padding-bottom: 2em;
 			    max-width: 85%;
 			    font-weight: 900;
 			}
@@ -85,7 +99,6 @@
 
 		.heading-title{
 			color: #fff;
-			 border-radius: 10px;
 			 height: 50px;
 		}
 		.model{
@@ -94,7 +107,7 @@
 		    margin-left: auto;
 		    margin-right: auto;
 		    border-radius: 6px;
-		    height: 240px;
+		    height: 140px;
 		}
 		.btn-model {
 		    margin: 2px 10px;
@@ -108,6 +121,7 @@
 		    display: inline;
 		}
 		.btn-r {
+			margin-top: 10px;
 		    color: rgb(174, 10, 42);
 		    background-color: rgba(174, 10, 42,.2);
 		    border-color: rgba(174, 10, 42,.5);
@@ -140,11 +154,21 @@
 		#imgpreview {
 		    width: 150px;
 		}
+		.js-container{
+            height: 200px;
+            width: 200px;
+            margin: 20px auto;
+        }
+        .js-result{
+        	height: 200px;
+        	width: 200px;
+        	margin-top: 20px;
+        }
 		/* 大屏显示器 */
-		@media screen and (min-width:415px ){
+		@media screen and (min-width:415px ) and (max-width: 1023px){
 			body{
 				min-width: 360px;
-				background-image: url(https://github.com/hustast/HustAvatar/blob/master/img/BG2.jpg?raw=true);
+				background-image: url('https://github.com/hustast/HustAvatar/blob/master/img/BG.jpg?raw=true');
 				background-repeat: no-repeat;
 				background-size: 755px 100%;
 				background-position: center top;
@@ -153,12 +177,12 @@
 				overflow-x:hidden;
 			}
 			.prev-div{
-				width:360px;
+				width:460px;
 				margin-right: auto;
 				margin-left: auto;
 			}
 			.model{
-				width: 280px;
+				width: 500px;
 			    margin: 10px auto;
 			    
 			    border-radius: 6%; 
@@ -166,15 +190,34 @@
 			}
 		
 			.btn-model {
-			    margin: 34px 10px;
-			    min-height: 120px;
-			    max-width: 120px;
+			    margin: 34px 25px;
+			    min-height: 200px;
+			    max-width: 200px;
 			    background-color: #FFF;
 			    border: none;
 			    background-size: auto 90%;
 			    background-repeat: no-repeat;
 			    background-position: center center;
 			    display: inline;
+			}
+			.preview {
+			    margin-left: auto;
+			    margin-right: auto;
+			    padding: 100px;
+			}
+
+			.chooseimg {
+			    margin: 0;
+			    padding-top: 4%;
+			}
+
+			.img-group {
+			    margin-left: 0px;
+			    padding-left: 0px;
+			}
+
+			#imgpreview {
+			    width: 240px;
 			}
 			.header{
 			    background-color: #600808;
@@ -205,40 +248,6 @@
 			    max-width: 755px;
 			}
 		}
-		/* 小屛手机 */
-		@media screen and (max-width: 320px) {
-			.btn-model {
-			    margin: 5px 10px;
-			    min-height: 100px;
-			    max-width: 100px;
-			    background-color: #FFF;
-			    border: none;
-			    background-size: auto 80%;
-			    background-repeat: no-repeat;
-			    background-position: center center;
-			    display: inline;
-			}
-			.prev-div{
-				width: 300px;
-				margin-right: auto;
-				margin-left: auto; 
+		
 				
-			}
-			.model{
-				height: 240px;
-			}
-			.heading {
-				margin-top: 10em;
-			    margin-left: auto;
-			    margin-right: auto;
-			    padding-bottom: 2em;
-			    max-width: 85%;
-			    background-image: url(http://sinacloud.net/illuminatorslab/ruc80/heading-bg.png);
-			    background-size: 100%;
-			    background-repeat: no-repeat;
-			    background-position: center center;
-			    min-height: 17%;
-			}
-		}
-		/* 		max-width:555px;*/		
 		
