--- a/css/media.css
+++ b/css/media.css
@@ -82,7 +82,7 @@
 			margin-left: auto;
 		}
 		.footer{
-		    margin-top: 100px;
+		    margin-top: 0px;
 		    margin-left: auto;
 		    margin-right: auto;
 		    margin-bottom: 0px;
@@ -97,13 +97,16 @@
 		    margin-bottom: 1%;
 		}
 		.heading-title{
-			margin-top: 60px;
-			color: #fff;
-			height: 50px;
+			margin-top: 30px;
+			color: #FFFFFF;
+			height: 40px;
+			margin-right: 10%;
+			margin-left: 10%;
+			font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 		}
 		.model{
 			width: 240px;
-			margin-top: 20px;
+			margin-top: 15px;
 		    margin-left: auto;
 		    margin-right: auto;
 		    border-radius: 6px;
@@ -113,8 +116,10 @@
 		    margin: 2px 10px;
 		    min-height: 100px;
 		    max-width: 100px;
-		    background-color: #FFF;
-		    border: none;
+
+			background: #FFFFFF;
+            opacity: 0.7;
+            border: 1px solid white;
 		    background-size: auto 80%;
 		    background-repeat: no-repeat;
 		    background-position: center center;
@@ -193,8 +198,12 @@
 			    margin: 34px 25px;
 			    min-height: 200px;
 			    max-width: 200px;
-			    background-color: #FFF;
-			    border: none;
+
+				background: #FFFFFF;
+	            opacity: 0.7;
+	            border: 1px solid white;
+/*			    background-color: #FFF;
+			    border: none;*/
 			    background-size: auto 90%;
 			    background-repeat: no-repeat;
 			    background-position: center center;
